--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,3 +124,103 @@ body {
 }
 
 /* End of news styling*/
+
+/* Footer styling*/
+
+footer {
+  position: absolute;
+  background-color: #264653;
+  width: 100%;
+}
+
+footer table {
+  padding: 10px;
+}
+
+#coloumn1 {
+  padding-right: 55vw;
+}
+
+.f-logo img{
+  height: 100px;
+  width: 300px;
+}
+
+.f-links ul{
+  list-style: none;
+}
+
+.f-links a{
+  font-size: 2vh;
+  text-decoration: none;
+  color: #fff;
+}
+
+.f-links a:hover{
+  color: #E63946;
+}
+
+#coloumn2 {
+  color: #fff;
+}
+
+#coloumn2 h4 {
+  text-align: center;
+}
+
+.socials {
+  margin-right: 3vw;
+}
+
+.socials img{
+  width: 50px;
+  height: 50px;
+  margin-left: 1.5vw;
+}
+
+@media (max-width: 1400px)
+{
+  #coloumn1 {
+    padding-right: 45vw;
+  }
+}
+
+@media (max-width: 1100px)
+{
+  #coloumn1 {
+    padding-right: 30vw;
+  }
+
+  .f-logo img{
+    height: 80px;
+    width: 200px;
+  }
+
+  .f-links a {
+    font-size: 1.5vh;
+  }
+
+  .information {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 800px)
+{
+  #coloumn1 {
+    padding-right: 15vw;
+  }
+
+  .information {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 600px)
+{
+  #coloumn1 {
+    padding-right: 5vw;
+  }
+}
+
+/* End of Footer styling*/
