--- a/information/CSS/style.css
+++ b/information/CSS/style.css
@@ -51,7 +51,14 @@ button{
 
 /* Set the size of the div element that contains the map */
 
-
+iframe{
+  position: relative;
+  left: 40%;
+  margin-top: 10%;
+  border: white solid 5px;
+  border-radius: 20px;
+  
+}
 
 /* The counter effect of the site */
 
@@ -64,33 +71,33 @@ button{
 }
 
 @keyframes counter {
-  0%  {counter-increment: count 1507;}
-  5%  {counter-increment: count 1504;}
-  10% {counter-increment: count 1510;}
-  15% {counter-increment: count 1518;}
-  20% {counter-increment: count 1512;}
-  25% {counter-increment: count 1520;}
+  10%  {counter-increment: count 1516;}
+  5%  {counter-increment: count 1502;}
+  0% {counter-increment: count 1510;}
+  15% {counter-increment: count 1595;}
+  20% {counter-increment: count 1532;}
+  25% {counter-increment: count 1540;}
   30% {counter-increment: count 1500;}
-  35% {counter-increment: count 1501;}
-  40% {counter-increment: count 1507;}
+  35% {counter-increment: count 1557;}
+  80% {counter-increment: count 1507;}
   45% {counter-increment: count 1495;}
   50% {counter-increment: count 1530;}
-  55% {counter-increment: count 1512;}
+  55% {counter-increment: count 1517;}
   60% {counter-increment: count 1537;}
-  65% {counter-increment: count 1522;}
+  65% {counter-increment: count 1542;}
   70% {counter-increment: count 1543;}
   75% {counter-increment: count 1523;}
-  80% {counter-increment: count 1567;}
+  40% {counter-increment: count 1587;}
   85% {counter-increment: count 1512;}
   90% {counter-increment: count 1521;}
   95% {counter-increment: count 1513;}
-  100% {counter-increment: count 1526;}
+  100% {counter-increment: count 1576;}
 }
 
 .counters2::after {
   font: 800 40px system-ui;
   content: counter(count);
-  animation: counter2 100s linear infinite alternate;
+  animation: counter2 80s linear infinite alternate;
   counter-reset: count 0;
   color: white;
 }
