Make registration form

--- a/CSS/form_style.css
+++ b/CSS/form_style.css
@@ -105,6 +105,136 @@ body {
 
 /* End of Navbar styling*/
 
+/* Form styling*/
+
+form {
+  max-width: 600px;
+  width: 100%;
+  margin: 20px auto;
+  padding: 30px;
+}
+
+form h1 {
+  text-align: center;
+  font-size: 30px;
+  color: #E63946;
+  text-transform: uppercase;
+}
+
+form p {
+  font-size: 15px;
+  text-align: center;
+  color: #757575;
+  font-style: italic;
+}
+
+.registration_form {
+  width: 100%;
+}
+
+.registration_form .inputfield{
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.registration_form .inputfield label {
+  width: 200px;
+  color: #707070;
+}
+
+.registration_form .inputfield input,
+.registration_form .inputfield textarea{
+  width: 100%;  
+  border: 1px solid #d5dbd9;
+  font-size: 1.7vh;
+  padding: 8px 10px;
+  border-radius: 5px;
+}
+
+textarea {
+  height: 15vh;
+}
+
+.custom_select {
+  width: 100%;
+  height: 40px;
+  position: relative;
+}
+
+.custom_select:before{
+  content: "";
+  position: absolute;
+  top: 17px;
+  right: 10px;
+  border: 8px solid;
+  border-color: #d5dbd9 transparent transparent transparent;
+}
+
+.custom_select select{
+  cursor: pointer;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 100%;
+  padding: 8px 10px;
+  font-size: 1.5vh;
+  border: 1px solid #d5dbd9;
+  border-radius: 5px;
+}
+
+.inputfield p{
+  font-size: 14px;
+  color: #757575;
+  margin-left: 1vw;
+}
+
+form .registration_form .inputfield .check{
+  width: 15px;
+  height: 15px;
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+
+.check input[type="checkbox"]{
+  position: absolute;
+  opacity: 0;
+}
+
+.checkmark{
+  width: 15px;
+  height: 15px;
+  border: 1px solid #E63946;
+  display: block;
+}
+
+.check input[type="checkbox"]:checked ~ .checkmark{
+  background: #ea5b66;
+}
+
+.btn{
+  width: 100%;
+  padding: 8px 10px;
+  font-size: 1.7vh; 
+  border: none;
+  background: #E63946;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+form .registration_form .inputfield .btn:hover{
+  background: #ea5b66;
+}
+
+@media (max-width: 700px) {
+  form {
+    width: 80%;
+  }
+}
+
+/* End of Form styling*/
+
 /* Footer styling*/
 
 footer {
