--- a/CSS/style.css
+++ b/CSS/style.css
@@ -195,6 +195,11 @@ body {
   .container2 p{
     font-size: 14px;
   }
+
+  .container2 img {
+    height: 10px;
+    width: 10px;
+  }
 }
 
 @media (max-width: 800px) {
@@ -213,6 +218,11 @@ body {
 
   .container2 p{
     font-size: 12px;
+  }
+
+  .container2 img {
+    height: 8px;
+    width: 8px;
   }
 }
 
@@ -233,9 +243,12 @@ body {
   .container2 p{
     font-size: 8px;
   }
-}
 
-/* End of Footer styling*/
+  .container2 img {
+    height: 5px;
+    width: 5px;
+  }
+}
 
 /* End of content styling*/
 
@@ -276,9 +289,6 @@ footer table {
 
 #coloumn2 {
   color: #fff;
-}
-
-#coloumn2 h4 {
   text-align: center;
 }
 
