--- a/CSS/info_style.css
+++ b/CSS/info_style.css
@@ -572,9 +572,8 @@ iframe {
   }
 }
 
-/* Malko da se pooprawi...*/
+/* Navigation dots styling */
 
-/* The navigation dots on the right side (PROWERENO)*/
 html{
   scroll-behavior: smooth;
 }
@@ -601,7 +600,124 @@ html{
   transform: translateX(+10px);
 }
 
-/* KRAI NA CONTENT CODE */
+/* End of navigation dots styling */
+
+/* Stats styling*/
+
+.panel {
+  padding: 50px 100px 50px 80px;
+  width: 750px;
+  height: 400px;
+  background: #305a6b;
+  box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.panel-body {
+  display: flex;
+  height: 340px;
+}
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 25%;
+  padding: 39px 0px 41px 26px;
+}
+.category {
+  display: flex;
+  flex-direction: column;
+}
+.category span:first-child {
+  font-weight: 300;
+  font-size: 14px;
+  opacity: 0.6;
+  color: #fff;
+  margin-bottom: 6px;
+}
+.category span:last-child {
+  font-size: 32px;
+  font-weight: 300;
+  color: #fff;
+}
+
+.chart {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  position: relative;
+}
+ 
+.label {
+  color: #FFF;
+  display: flex;
+  justify-content: space-between;
+  width: 215px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+@media (max-width: 1900px)  {
+  .panel {
+    padding: 40px 90px 40px 30px;
+    width: 600px;
+    height: 350px;
+  }
+}
+
+@media (max-width: 1700px)  {
+  .panel {
+    padding: 40px 90px 40px 30px;
+    width: 600px;
+    height: 350px;
+  }
+
+  .cardbig {
+    margin-left: 10px;
+  }
+}
+
+/* End of Stats styling*/
+
+/* Table styling */
+
+.table table, .table th, .table td{
+  border-collapse: collapse;
+  border: 1px solid #E63946;
+  color: #FFF;
+}
+
+.table td{
+  padding: 5px;
+}
+
+#theader {
+  text-align: center;
+  background-color: #F5717A;
+}
+
+#trow {
+  background-color: #FF9DA4;
+}
+
+@media (max-width: 1900px)  {
+  .table h3 {
+    font-size: 17px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 1700px)  {
+  .table {
+    margin-left: 0px;
+  }
+}
+
+/* End of Table styling */
 
 /* Footer styling*/
 
@@ -699,141 +815,3 @@ footer table {
 }
 
 /* End of Footer styling*/
-
-
-/* Stats styling*/
-
-.panel {
-  padding: 50px 100px 50px 80px;
-  width: 750px;
-  height: 400px;
-  background: #305a6b;
-  box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
-  border-radius: 6px;
-  overflow: hidden;
-}
-
-.panel-body {
-  display: flex;
-  height: 340px;
-}
-
-.categories {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-basis: 25%;
-  padding: 39px 0px 41px 26px;
-}
-.category {
-  display: flex;
-  flex-direction: column;
-}
-.category span:first-child {
-  font-weight: 300;
-  font-size: 14px;
-  opacity: 0.6;
-  color: #fff;
-  margin-bottom: 6px;
-}
-.category span:last-child {
-  font-size: 32px;
-  font-weight: 300;
-  color: #fff;
-}
-
-.chart {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 2;
-  position: relative;
-}
- 
-.label {
-  color: #FFF;
-  display: flex;
-  justify-content: space-between;
-  width: 215px;
-  margin-top: 30px;
-  margin-bottom: 50px;
-}
-
-.android-stats {
-  bottom: 155px;
-  right: 230px;
-}
- 
-.ios-stats {
-  bottom: 83px;
-  left: 133px;
-}
- 
-.windows-stats {
-  bottom: 133px;
-  right: 62px;
-}
- 
-.dataset-1 {
-  animation: raise .8s linear 1;
-  transform-origin: bottom;
-}
-.dataset-2 {
-  animation: raise 1.6s linear 1;
-  transform-origin: bottom;
-}
-.dataset-3 {
-  animation: raise 1.8s linear 1;
-  transform-origin: bottom;
-}
- 
-@media (max-width: 1900px)  {
-  .panel {
-    padding: 40px 90px 40px 30px;
-    width: 600px;
-    height: 350px;
-  }
-
-  .table h3 {
-    font-size: 17px;
-    text-align: center;
-  }
-}
-
-@media (max-width: 1700px)  {
-  .panel {
-    padding: 40px 90px 40px 30px;
-    width: 600px;
-    height: 350px;
-  }
-
-  .cardbig {
-    margin-left: 10px;
-  }
-
-  .table {
-    margin-left: 0px;
-  }
-}
-
-/* End of Stats styling*/
-
-.table table, .table th, .table td{
-  border-collapse: collapse;
-  border: 1px solid #E63946;
-  color: #FFF;
-}
-
-.table td{
-  padding: 5px;
-}
-
-#theader {
-  text-align: center;
-  background-color: #F5717A;
-}
-
-#trow {
-  background-color: #FF9DA4;
-}
