Change table colors

--- a/CSS/info_style.css
+++ b/CSS/info_style.css
@@ -697,11 +697,11 @@ html{
 
 #theader {
   text-align: center;
-  background-color: #F5717A;
+  background-color: #E54B57;
 }
 
 #trow {
-  background-color: #FF9DA4;
+  background-color: #EB848C;
 }
 
 @media (max-width: 1900px)  {
