--- a/CSS/style.css
+++ b/CSS/style.css
@@ -148,7 +148,7 @@ body {
 .container2 {
   position: absolute;
   left: 31vw;
-  background-color: #A8DADC;
+  background-color: #88D1D5;
   width: 20vw;
   padding: 10px 10px 10px 10px;
   width: 20vw;
