--- a/CSS/info_style.css
+++ b/CSS/info_style.css
@@ -1,4 +1,6 @@
-::-webkit-scrollbar {
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+:-webkit-scrollbar {
   display: none;
 }
 
@@ -23,12 +25,11 @@ body {
   color: white;
 }
 
-.logo {
-  font-size: 40px;
-  margin: 1vw 2vw;
-  text-shadow: 0px -10px 11px #E63946;
+.logo img {
+  margin-left: 1vw;
+  height: 90px; 
+  width: 290px;
 }
-
 
 .links ul {
   margin: 0;
@@ -61,12 +62,6 @@ body {
   justify-content: space-between;
   width: 30px;
   height: 20px;
-}
-
-@media (max-width: 1300px) {
-  .logo {
-    font-size: 35px;
-  }
 }
 
 @media (max-width: 750px) {
@@ -326,11 +321,11 @@ body {
 }
 
 h5{
-  font-size: 12px;
+  font-size: 15px;
   color: #fff;
   text-shadow: 0 0 5px #999;
   text-align: center;
-}
+  font-family: 'Varela Round', sans-serif;}
 
 @media (max-width: 1800px) 
 {
