--- a/CSS/info_style.css
+++ b/CSS/info_style.css
@@ -639,6 +639,7 @@ html{
 }
 
 .chart {
+  align-items: center;
   width: 100%;
   height: 100%;
   display: flex;
@@ -669,6 +670,23 @@ html{
     padding: 40px 90px 40px 30px;
     width: 600px;
     height: 350px;
+  }
+
+  .cardbig {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 700px)  {
+  .chart svg{
+    height: 100px;
+    width: 350px;
+  }
+
+  .panel {
+    padding: 0px;
+    width: 500px;
+    height: 300px;
   }
 
   .cardbig {
