--- a/CSS/info_style.css
+++ b/CSS/info_style.css
@@ -26,8 +26,8 @@ body {
 
 .logo img {
   margin-left: 1vw;
-  height: 90px; 
-  width: 290px;
+  height: 70px; 
+  width: 270px;
 }
 
 .links ul {
@@ -63,10 +63,25 @@ body {
   height: 20px;
 }
 
+@media (max-width: 1300px) {
+  .logo img {
+    height: 60px; 
+    width: 220px;
+  }
+}
+
+@media (max-width: 850px) {
+  .logo img {
+    height: 50px; 
+    width: 180px;
+  }
+}
+
+
 @media (max-width: 750px) {
-  .logo {
-    font-size: 30px;
-    padding: 2vh 0;
+  .logo img {
+    height: 80px; 
+    width: 280px;
   }
 
   .button{
