--- a/CSS/contact_style.css
+++ b/CSS/contact_style.css
@@ -1,377 +1,345 @@
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: 'Cabin', sans-serif;
-  background-color: #fff;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Cabin', sans-serif;
+    background-color: #fff;
 }
+
 
 /* Navbar styling*/
 
 .navbar {
-  position: sticky;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #264653;
-  color: white;
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #264653;
+    color: white;
 }
 
 .logo img {
-  margin-left: 1vw;
-  height: 70px; 
-  width: 270px;
+    margin-left: 1vw;
+    height: 70px;
+    width: 270px;
 }
 
 .links ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
 
 .links li {
-  list-style: none;
+    list-style: none;
 }
 
 .links li a {
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  padding: 3.5vh 3vw;
-  display: block;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding: 3.5vh 3vw;
+    display: block;
 }
 
 .links li:hover {
-  background-color: #E63946;
+    background-color: #E63946;
 }
 
 .button {
-  position: absolute;
-  top: 3.5vh;
-  right: 4vw;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 20px;
+    position: absolute;
+    top: 3.5vh;
+    right: 4vw;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
 }
 
 @media (max-width: 1300px) {
-  .logo img {
-    height: 60px; 
-    width: 220px;
-  }
+    .logo img {
+        height: 60px;
+        width: 220px;
+    }
 }
 
 @media (max-width: 850px) {
-  .logo img {
-    height: 50px; 
-    width: 180px;
-  }
+    .logo img {
+        height: 50px;
+        width: 180px;
+    }
 }
-
 
 @media (max-width: 750px) {
-  .logo img {
-    height: 80px; 
-    width: 280px;
-  }
-
-  .button{
-    top: 3.5vh;
-    display: flex;
-  }
-
-  .links{
-    display: none;
-    background-color: #305a6b;
-    width: 100%;
-  }
-
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .links ul {
-    width: 100%;
-    flex-direction: column;
-  }
-
-  .links li {
-    text-align: center;
-  }
-
-  .links li a {
-    padding: 2vh 1vw;
-  }
-
-  .links.active {
-    display: flex;
-  }
+    .logo img {
+        height: 80px;
+        width: 280px;
+    }
+    .button {
+        top: 3.5vh;
+        display: flex;
+    }
+    .links {
+        display: none;
+        background-color: #305a6b;
+        width: 100%;
+    }
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+    .links li {
+        text-align: center;
+    }
+    .links li a {
+        padding: 2vh 1vw;
+    }
+    .links.active {
+        display: flex;
+    }
 }
+
 
 /* End of Navbar styling*/
 
 .welcome_text {
-  text-align: center;
-  color: #E63946;
+    text-align: center;
+    color: #E63946;
 }
+
 
 /* Content styling*/
 
 .container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 100px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 100px;
 }
 
 .info {
-  padding: 0px 50px 0px 100px;
+    padding: 0px 50px 0px 100px;
 }
 
 .info h2 {
-  text-align: center;
+    text-align: center;
 }
 
 .map {
-  height:600px;
-  width:700px;
+    height: 600px;
+    width: 700px;
 }
 
 .gmap_canvas {
-  border-radius: 20px;
-  overflow:hidden;
-  height:600px;
-  width:700px;
-  border: 2px #E63946 solid;
+    border-radius: 20px;
+    overflow: hidden;
+    height: 600px;
+    width: 700px;
+    border: 2px #E63946 solid;
 }
 
-@media (max-width: 1900px)
-{
-  .map {
-    height:500px;
-    width:600px;
-  }
-
-  .gmap_canvas {
-    height:500px;
-    width:600px;
-  }
+@media (max-width: 1900px) {
+    .map {
+        height: 500px;
+        width: 600px;
+    }
+    .gmap_canvas {
+        height: 500px;
+        width: 600px;
+    }
 }
 
-@media (max-width: 1800px)
-{
-  .map {
-    height:450px;
-    width:550px;
-  }
-
-  .gmap_canvas {
-    height:450px;
-    width:550px;
-  }
+@media (max-width: 1800px) {
+    .map {
+        height: 450px;
+        width: 550px;
+    }
+    .gmap_canvas {
+        height: 450px;
+        width: 550px;
+    }
 }
 
-@media (max-width: 1700px)
-{
-  .info h2 {
-    font-size: 22px;
-  }
-
-  .map {
-    height:400px;
-    width:500px;
-  }
-
-  .gmap_canvas {
-    height:400px;
-    width:500px;
-  }
+@media (max-width: 1700px) {
+    .info h2 {
+        font-size: 22px;
+    }
+    .map {
+        height: 400px;
+        width: 500px;
+    }
+    .gmap_canvas {
+        height: 400px;
+        width: 500px;
+    }
 }
 
-@media (max-width: 1500px)
-{
-  .info h2 {
-    font-size: 18px;
-  }
-  
-  .info h3 {
-    font-size: 17px;
-  }
-
-  .info p {
-    font-size: 15px;
-  }
+@media (max-width: 1500px) {
+    .info h2 {
+        font-size: 18px;
+    }
+    .info h3 {
+        font-size: 17px;
+    }
+    .info p {
+        font-size: 15px;
+    }
 }
 
-@media (max-width: 1400px)
-{
-  .info {
-    padding: 0px 50px 0px 90px;
-  }
-
-  .info h2 {
-    font-size: 15px;
-  }
-
-  .info h3 {
-    font-size: 14px;
-  }
-
-  .info p {
-    font-size: 12px;
-  }
+@media (max-width: 1400px) {
+    .info {
+        padding: 0px 50px 0px 90px;
+    }
+    .info h2 {
+        font-size: 15px;
+    }
+    .info h3 {
+        font-size: 14px;
+    }
+    .info p {
+        font-size: 12px;
+    }
 }
 
-@media (max-width: 1300px)
-{
-  .info {
-    padding: 0px 50px 0px 50px;
-  }
+@media (max-width: 1300px) {
+    .info {
+        padding: 0px 50px 0px 50px;
+    }
 }
 
-@media (max-width: 900px)
-{
-  .map {
-    height:350px;
-    width:450px;
-  }
-
-  .gmap_canvas {
-    height:350px;
-    width:450px;
-  }
+@media (max-width: 900px) {
+    .map {
+        height: 350px;
+        width: 450px;
+    }
+    .gmap_canvas {
+        height: 350px;
+        width: 450px;
+    }
 }
 
-@media (max-width: 700px)
-{
-  .container {
-    flex-direction: column;
-  }
+@media (max-width: 700px) {
+    .container {
+        flex-direction: column;
+    }
 }
 
-@media (max-width: 500px)
-{
-  .map {
-    height:400px;
-    width:400px;
-  }
-
-  .gmap_canvas {
-    height:400px;
-    width:400px;
-  }
+@media (max-width: 500px) {
+    .map {
+        height: 400px;
+        width: 400px;
+    }
+    .gmap_canvas {
+        height: 400px;
+        width: 400px;
+    }
 }
 
-@media (max-width: 400px)
-{
-  .map {
-    height:300px;
-    width:300px;
-  }
-
-  .gmap_canvas {
-    height:300px;
-    width:300px;
-  }
+@media (max-width: 400px) {
+    .map {
+        height: 300px;
+        width: 300px;
+    }
+    .gmap_canvas {
+        height: 300px;
+        width: 300px;
+    }
 }
+
 
 /* End of Content styling*/
+
 
 /* Footer styling*/
 
 footer {
-  position: absolute;
-  background-color: #264653;
-  width: 100%;
+    position: absolute;
+    background-color: #264653;
+    width: 100%;
 }
 
 footer table {
-  padding: 10px;
+    padding: 10px;
 }
 
 #coloumn1 {
-  padding-right: 55vw;
+    padding-right: 55vw;
 }
 
-.f-logo img{
-  height: 100px;
-  width: 300px;
+.f-logo img {
+    height: 100px;
+    width: 300px;
 }
 
-.f-links ul{
-  list-style: none;
+.f-links ul {
+    list-style: none;
 }
 
-.f-links a{
-  font-size: 2vh;
-  text-decoration: none;
-  color: #fff;
+.f-links a {
+    font-size: 2vh;
+    text-decoration: none;
+    color: #fff;
 }
 
-.f-links a:hover{
-  color: #E63946;
+.f-links a:hover {
+    color: #E63946;
 }
 
 #coloumn2 {
-  color: #fff;
-  text-align: center;
+    color: #fff;
+    text-align: center;
 }
 
 .socials {
-  margin-right: 3vw;
+    margin-right: 3vw;
 }
 
-.socials img{
-  width: 50px;
-  height: 50px;
-  margin-left: 1.5vw;
+.socials img {
+    width: 50px;
+    height: 50px;
+    margin-left: 1.5vw;
 }
 
-@media (max-width: 1400px)
-{
-  #coloumn1 {
-    padding-right: 45vw;
-  }
+@media (max-width: 1400px) {
+    #coloumn1 {
+        padding-right: 45vw;
+    }
 }
 
-@media (max-width: 1100px)
-{
-  #coloumn1 {
-    padding-right: 30vw;
-  }
-
-  .f-logo img{
-    height: 80px;
-    width: 200px;
-  }
-
-  .f-links a {
-    font-size: 1.5vh;
-  }
-
-  .information {
-    font-size: 15px;
-  }
+@media (max-width: 1100px) {
+    #coloumn1 {
+        padding-right: 30vw;
+    }
+    .f-logo img {
+        height: 80px;
+        width: 200px;
+    }
+    .f-links a {
+        font-size: 1.5vh;
+    }
+    .information {
+        font-size: 15px;
+    }
 }
 
-@media (max-width: 800px)
-{
-  #coloumn1 {
-    padding-right: 15vw;
-  }
-
-  .information {
-    font-size: 13px;
-  }
+@media (max-width: 800px) {
+    #coloumn1 {
+        padding-right: 15vw;
+    }
+    .information {
+        font-size: 13px;
+    }
 }
 
-@media (max-width: 600px)
-{
-  #coloumn1 {
-    padding-right: 5vw;
-  }
+@media (max-width: 600px) {
+    #coloumn1 {
+        padding-right: 5vw;
+    }
 }
+
 
 /* End of Footer styling*/
