--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,358 +1,334 @@
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: 'Cabin', sans-serif;
-  background-color: #fff;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Cabin', sans-serif;
+    background-color: #fff;
 }
+
 
 /* Navbar styling*/
 
 .navbar {
-  position: sticky;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #264653;
-  color: white;
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #264653;
+    color: white;
 }
 
 .logo img {
-  margin-left: 1vw;
-  height: 70px; 
-  width: 270px;
+    margin-left: 1vw;
+    height: 70px;
+    width: 270px;
 }
 
 .links ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
 
 .links li {
-  list-style: none;
+    list-style: none;
 }
 
 .links li a {
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-  padding: 3.5vh 3vw;
-  display: block;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding: 3.5vh 3vw;
+    display: block;
 }
 
 .links li:hover {
-  background-color: #E63946;
+    background-color: #E63946;
 }
 
 .button {
-  position: absolute;
-  top: 3.5vh;
-  right: 4vw;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 20px;
+    position: absolute;
+    top: 3.5vh;
+    right: 4vw;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
 }
 
 @media (max-width: 1300px) {
-  .logo img {
-    height: 60px; 
-    width: 220px;
-  }
+    .logo img {
+        height: 60px;
+        width: 220px;
+    }
 }
 
 @media (max-width: 850px) {
-  .logo img {
-    height: 50px; 
-    width: 180px;
-  }
+    .logo img {
+        height: 50px;
+        width: 180px;
+    }
 }
-
 
 @media (max-width: 750px) {
-  .logo img {
-    height: 80px; 
-    width: 280px;
-  }
-
-  .button{
-    top: 3.5vh;
-    display: flex;
-  }
-
-  .links{
-    display: none;
-    background-color: #305a6b;
-    width: 100%;
-  }
-
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .links ul {
-    width: 100%;
-    flex-direction: column;
-  }
-
-  .links li {
-    text-align: center;
-  }
-
-  .links li a {
-    padding: 2vh 1vw;
-  }
-
-  .links.active {
-    display: flex;
-  }
+    .logo img {
+        height: 80px;
+        width: 280px;
+    }
+    .button {
+        top: 3.5vh;
+        display: flex;
+    }
+    .links {
+        display: none;
+        background-color: #305a6b;
+        width: 100%;
+    }
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+    .links li {
+        text-align: center;
+    }
+    .links li a {
+        padding: 2vh 1vw;
+    }
+    .links.active {
+        display: flex;
+    }
 }
+
 
 /* End of Navbar styling*/
 
 #welcome_text {
-  text-align: center;
-  color: #E63946;
+    text-align: center;
+    color: #E63946;
 }
 
 @media (max-width: 1400px) {
-  #welcome_text {
-    font-size: 14px;
-  }
+    #welcome_text {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 800px) {
-  #welcome_text {
-    font-size: 10px;
-  }
+    #welcome_text {
+        font-size: 10px;
+    }
 }
+
 
 /* Page content styling*/
 
 .content1 {
-  position: relative;
-  display: flex;
-  color: #fff;
-  margin: 5vh;
-  padding: 30vw 2vw 2vw 2vw;
-  background-image: url("..\\Images/burgas_firedepartment.jpg");
-  background-size: cover;
-  margin-bottom: 200px;
+    position: relative;
+    display: flex;
+    color: #fff;
+    margin: 5vh;
+    padding: 30vw 2vw 2vw 2vw;
+    background-image: url("..\\Images/burgas_firedepartment.jpg");
+    background-size: cover;
+    margin-bottom: 200px;
 }
 
 .container1 {
-  font-size: 20px;
-  position: absolute;
-  left: 0;
-  background-color: #305a6b;
-  padding: 10px 10px 10px 10px;
-  width: 30vw;
-  height: 180px;
+    font-size: 20px;
+    position: absolute;
+    left: 0;
+    background-color: #305a6b;
+    padding: 10px 10px 10px 10px;
+    width: 30vw;
+    height: 180px;
 }
 
 .container2 {
-  position: absolute;
-  left: 31vw;
-  background-color: #88D1D5;
-  width: 20vw;
-  padding: 10px 10px 10px 10px;
-  width: 20vw;
-  height: 180px;
+    position: absolute;
+    left: 31vw;
+    background-color: #88D1D5;
+    width: 20vw;
+    padding: 10px 10px 10px 10px;
+    width: 20vw;
+    height: 180px;
 }
 
-.container2 h2{
-  font-size: 25px;
+.container2 h2 {
+    font-size: 25px;
 }
 
-.container2 p{
-  font-size: 17px;
+.container2 p {
+    font-size: 17px;
 }
 
 .container2 img {
-  height: 15px;
-  width: 15px;
+    height: 15px;
+    width: 15px;
 }
 
-@media (max-width: 1600px)
-{
-  .container1 {
-    font-size: 17px;
-  }
-
-  .container2 h2{
-    font-size: 22px;
-  }
-
-  .container2 p{
-    font-size: 16px;
-  }
+@media (max-width: 1600px) {
+    .container1 {
+        font-size: 17px;
+    }
+    .container2 h2 {
+        font-size: 22px;
+    }
+    .container2 p {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 1400px) {
-  .container1 {
-    font-size: 15px;
-  }
-
-  .container2 h2{
-    font-size: 20px;
-  }
-
-  .container2 p{
-    font-size: 14px;
-  }
-
-  .container2 img {
-    height: 10px;
-    width: 10px;
-  }
+    .container1 {
+        font-size: 15px;
+    }
+    .container2 h2 {
+        font-size: 20px;
+    }
+    .container2 p {
+        font-size: 14px;
+    }
+    .container2 img {
+        height: 10px;
+        width: 10px;
+    }
 }
 
 @media (max-width: 800px) {
-  .container1{
-    font-size: 10px;
-    height: 130px;
-  }
-
-  .container2{
-    height: 130px;
-  }
-
-  .container2 h2{
-    font-size: 13px;
-  }
-
-  .container2 p{
-    font-size: 12px;
-  }
-
-  .container2 img {
-    height: 8px;
-    width: 8px;
-  }
+    .container1 {
+        font-size: 10px;
+        height: 130px;
+    }
+    .container2 {
+        height: 130px;
+    }
+    .container2 h2 {
+        font-size: 13px;
+    }
+    .container2 p {
+        font-size: 12px;
+    }
+    .container2 img {
+        height: 8px;
+        width: 8px;
+    }
 }
 
 @media (max-width: 500px) {
-  .container1 {
-    font-size: 7px;
-    height: 100px;
-  }
-
-  .container2{
-    height: 100px;
-  }
-
-  .container2 h2{
-    font-size: 10px;
-  }
-
-  .container2 p{
-    font-size: 8px;
-  }
-
-  .container2 img {
-    height: 5px;
-    width: 5px;
-  }
+    .container1 {
+        font-size: 7px;
+        height: 100px;
+    }
+    .container2 {
+        height: 100px;
+    }
+    .container2 h2 {
+        font-size: 10px;
+    }
+    .container2 p {
+        font-size: 8px;
+    }
+    .container2 img {
+        height: 5px;
+        width: 5px;
+    }
 }
 
+
 /* End of content styling*/
+
 
 /* Footer styling*/
 
 footer {
-  position: absolute;
-  background-color: #264653;
-  width: 100%;
+    position: absolute;
+    background-color: #264653;
+    width: 100%;
 }
 
 footer table {
-  padding: 10px;
+    padding: 10px;
 }
 
 #coloumn1 {
-  padding-right: 55vw;
+    padding-right: 55vw;
 }
 
-.f-logo img{
-  height: 100px;
-  width: 300px;
+.f-logo img {
+    height: 100px;
+    width: 300px;
 }
 
-.f-links ul{
-  list-style: none;
+.f-links ul {
+    list-style: none;
 }
 
-.f-links a{
-  font-size: 2vh;
-  text-decoration: none;
-  color: #fff;
+.f-links a {
+    font-size: 2vh;
+    text-decoration: none;
+    color: #fff;
 }
 
-.f-links a:hover{
-  color: #E63946;
+.f-links a:hover {
+    color: #E63946;
 }
 
 #coloumn2 {
-  color: #fff;
-  text-align: center;
+    color: #fff;
+    text-align: center;
 }
 
 .socials {
-  margin-right: 3vw;
+    margin-right: 3vw;
 }
 
-.socials img{
-  width: 50px;
-  height: 50px;
-  margin-left: 1.5vw;
+.socials img {
+    width: 50px;
+    height: 50px;
+    margin-left: 1.5vw;
 }
 
-@media (max-width: 1400px)
-{
-  #coloumn1 {
-    padding-right: 45vw;
-  }
+@media (max-width: 1400px) {
+    #coloumn1 {
+        padding-right: 45vw;
+    }
 }
 
-@media (max-width: 1100px)
-{
-  #coloumn1 {
-    padding-right: 30vw;
-  }
-
-  .f-logo img{
-    height: 80px;
-    width: 200px;
-  }
-
-  .f-links a {
-    font-size: 1.5vh;
-  }
-
-  .information {
-    font-size: 15px;
-  }
+@media (max-width: 1100px) {
+    #coloumn1 {
+        padding-right: 30vw;
+    }
+    .f-logo img {
+        height: 80px;
+        width: 200px;
+    }
+    .f-links a {
+        font-size: 1.5vh;
+    }
+    .information {
+        font-size: 15px;
+    }
 }
 
-@media (max-width: 800px)
-{
-  #coloumn1 {
-    padding-right: 15vw;
-  }
-
-  .information {
-    font-size: 13px;
-  }
+@media (max-width: 800px) {
+    #coloumn1 {
+        padding-right: 15vw;
+    }
+    .information {
+        font-size: 13px;
+    }
 }
 
-@media (max-width: 600px)
-{
-  #coloumn1 {
-    padding-right: 5vw;
-  }
+@media (max-width: 600px) {
+    #coloumn1 {
+        padding-right: 5vw;
+    }
 }
+
 
 /* End of Footer styling*/
